+ Added a few separators in the admin menu, and made minor changes to item order. (Admin.php) ! Fixed cases where separators would appear at the beginning or end of a popup menu, or would have more than one separator in a row. (Subs-Menu.php) - IE6 and IE7 don't support separators. Don't want to waste time on them. (ie6.css, ie7.css) ! Fixed IE6 not showing BCC help popup. (PersonalMessage.template.php, pm.js) * Minor French language fixes. (Packages.french.php)

--- a/Themes/default/css/ie6.css
+++ b/Themes/default/css/ie6.css
@@ -239,3 +239,6 @@ table.table_grid, table.cs0, table.cs1 {
 	width: expression(this.clientWidth < 300 ? '300px' : 'auto');
 	height: 150px;
 }
+.menu li.separator {
+	display: none;
+}
